# Arduino_Opta_Blueprint

./: .gitignore  AboutCustomExpansionType.md  AddCustomExpansion.md  AddNewExpansion.md  Notes.md  OptaBlueProtoco.ods  Protocol.md  README.md  library.properties
examples/: README.md
examples/assignAddress/: assignAddress.ino
examples/getExpansions/: getExpansions.ino
examples/getVersion/: getVersion.ino
examples/readFlash/: readFlash.ino
examples/updateExpansionFw/: fwUpdateAnalog.h  fwUpdateDigital.h  updateExpansionFw.ino
examples/writeFlash/: writeFlash.ino
examples_private/UnoR4Display/: UnoR4Display.ino
firmwares/Analog/: Analog.ino
firmwares/Digital/: Digital.ino
firmwares/UnoR4Display/: UnoR4Display.ino
fwUpdater/: CMakeLists.txt  cmake.sh
fwUpdater/source/: CMakeLists.txt  main.cpp
src/: AnalogCommonCfg.h  AnalogExpansion.cpp  AnalogExpansion.h  AnalogExpansionAddress.h  AnalogExpansionCfg.h  BossaOpta.cpp  BossaOpta.h  CommonAnalog.h  CommonCfg.h  CommonDigital.h  Controller.cpp  Controller.h  ControllerCfg.h  DigitalCommonCfg.h  DigitalExpansion.cpp  DigitalExpansion.h  DigitalExpansionsAddresses.h  DigitalMechExpansion.cpp  DigitalMechExpansion.h  DigitalStSolidExpansion.cpp  DigitalStSolidExpansion.h  Expansion.cpp  Expansion.h  ExpansionOperations.h  Module.cpp  Module.h  OptaAnalog.cpp  OptaAnalog.h  OptaAnalogCfg.h  OptaAnalogProtocol.h  OptaAnalogTypes.h  OptaBlue.h  OptaBlueModule.cpp  OptaBlueModule.h  OptaBluePrintCfg.h  OptaBlueProtocol.h  OptaController.cpp  OptaController.h  OptaControllerCfg.h  OptaCrc.cpp  (+14 more)
(+71 files in other folders)
